syntax = "proto3";

package wallet_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/astronely/financial-helper_microservices/financeService/pkg/wallet_v1;wallet_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Wallet API"
    version: "1.0.0"
    contact: {
      name: "astronely"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service WalletV1 {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/wallet",
      body: "*"
    };
  };

  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/api/v1/wallet",
    };
  };

  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/api/v1/wallets",
    };
  };

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/wallet",
    };
  };

  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/api/v1/wallet",
      body: "*"
    };
  };
}

// -------------------------------------------------------------------------

message WalletInfo {
  int64 owner_id = 1;
  int64 board_id = 2;
  string name = 3;
  string balance = 4;
}

message CreateWalletInfo {
  string name = 1 [(validate.rules).string.min_len = 1];
}

message Wallet {
  int64 id = 1 [(validate.rules).int64.gte = 0];
  WalletInfo info = 2 [(validate.rules).message.required = true];
  google.protobuf.Timestamp created_at = 3;
}

message UpdatedWalletInfo {
  google.protobuf.StringValue name = 1 [(validate.rules).string = {min_len:1}];
  google.protobuf.StringValue balance = 2 [(validate.rules).string = {min_len:1}];
}

message CreateRequest {
  CreateWalletInfo info = 1 [(validate.rules).message.required = true];
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetResponse {
  Wallet wallet = 1;
}

message ListRequest {
  int64 limit = 1 [(validate.rules).int64.gte = 0];
  int64 offset = 2 [(validate.rules).int64.gte = 0];
  int64 board_id = 3 [(validate.rules).int64.gt = 0];
}

message ListResponse {
  repeated Wallet wallets = 1;
}

message UpdateRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
  UpdatedWalletInfo info = 2 [(validate.rules).message.required = true];
}

message UpdateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}
